Fixed padding around special link cards for linked fediverse posts on small screens

--- a/TangerineUI-cherry.css
+++ b/TangerineUI-cherry.css
@@ -2987,6 +2987,10 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
         padding-top: 0;
         padding-bottom: 0;
     }
+    .app-body .status-card[href*="/@" i]:not(.expanded,:has(.icon-file-text)) .status-card__content {
+        padding-top: 12px;
+        padding-bottom: 12px;
+    }
     .app-body .status-card:not(.expanded) .status-card__host {
         margin-bottom: 2px;
         font-size: 12px;
